content/classes/3.0/PBRMetallicRoughnessMaterial.md
---
TAGS:
---
## Description

class [PBRMetallicRoughnessMaterial](/classes/3.0/PBRMetallicRoughnessMaterial) extends Internals.[PBRBaseSimpleMaterial](/classes/3.0/PBRBaseSimpleMaterial)

The PBR material of BJS following the metal roughness convention.

This fits to the define PBR convention in the GLTF definition:

https://github.com/KhronosGroup/glTF/tree/2.0/specification/2.0

## Constructor

## new [PBRMetallicRoughnessMaterial](/classes/3.0/PBRMetallicRoughnessMaterial)(name, scene)

Instantiates a new PBRMetalRoughnessMaterial instance.

         * @param name The material name

#### Parameters
 | Name | Type | Description
---|---|---|---
 | name | string |  The material name
 | scene | [Scene](/classes/3.0/Scene) |  The scene the material will be use in.
## Members

### baseColor : [Color3](/classes/3.0/Color3)

The base color has two different interpretations depending on the value of metalness.

When the material is a metal, the base color is the specific measured reflectance value

at normal incidence (F0). For a non-metal the base color represents the reflected diffuse color

of the material.

### baseTexture : [BaseTexture](/classes/3.0/BaseTexture)

Base texture of the metallic workflow. It contains both the baseColor information in RGB as

well as opacity information in the alpha channel.

### metallic : number

Specifies the metallic scalar value of the material.

Can also be used to scale the metalness values of the metallic texture.

### roughness : number

Specifies the roughness scalar value of the material.

Can also be used to scale the roughness values of the metallic texture.

### metallicRoughnessTexture : [BaseTexture](/classes/3.0/BaseTexture)

[Texture](/classes/3.0/Texture) containing both the metallic value in the B channel and the

roughness value in the G channel to keep better precision.

## Methods

### getClassName() &rarr; string

Return the currrent class name of the material.
### serialize() &rarr; any

Serialize the material to a parsable JSON object.
### static Parse(source, scene, rootUrl) &rarr; [PBRMetallicRoughnessMaterial](/classes/3.0/PBRMetallicRoughnessMaterial)

Parses a JSON object correponding to the serialize function.

#### Parameters
 | Name | Type | Description
---|---|---|---
 | source | any | 
 | scene | [Scene](/classes/3.0/Scene) | 
 | rootUrl | string | 
